# differentiator

./: .gitignore  CMakeLists.txt  install.sh  makefile  run.sh  run_tests.sh
data/: expression_to_diff.txt
graph/: create_graph.cpp  create_graph.h  graph  graphcode.txt
include/: debugging.hpp  token_arrays.hpp  tokenizator.hpp  tree_func.hpp  tree_graphics.h
log/: diff_log.txt
main_module/: CMakeLists.txt  log.cpp  operations.cpp  tree_func.cpp
main_module/include/: debugging.hpp  operations.hpp  tree_func.hpp
main_src/: CMakeLists.txt  argv_parser.cpp  differentiator.cpp  log.cpp  main.cpp  operations.cpp  tree_func.cpp
main_src/include/: argv_parser.hpp  debugging.hpp  differentiator.hpp  operations.hpp  tree_func.hpp
modules/: CMakeLists.txt
modules/calculator/: CMakeLists.txt  calculator.cpp
modules/calculator/include/: calculator.hpp
modules/differentiation_module/: CMakeLists.txt  differentiate.cpp  differentiation_module.cpp
modules/differentiation_module/include/: differentiation_module.hpp  differentiator.hpp  differentiator_DSL.hpp
modules/optimizer/: CMakeLists.txt  simplificate.cpp
modules/optimizer/include/: simplificate.hpp
modules/parsing/: CMakeLists.txt  parser.cpp
modules/parsing/include/: parser.hpp
modules/printing_results/: CMakeLists.txt  print_in_line.cpp
modules/printing_results/include/: in_line_DSL.hpp
modules/tokenization/: CMakeLists.txt  token_arrays.cpp  tokenizator.cpp
modules/tokenization/include/: token_arrays.hpp  tokenizator.hpp
modules/tree_graphics/: CMakeLists.txt  tree_graphics.cpp
modules/tree_graphics/include/: tree_graphics.h  tree_graphics.hpp
src/: calculate_expressions.cpp  create_node.cpp  create_node.h  expression_reader.cpp  file_reader.cpp  global.cpp  main.cpp  main_header.h  operations.h  tree_func.cpp  tree_graphics.cpp
src/differentiation/: differentiate.cpp  differentiate.h
src/file_reading/: expression_reader.cpp  file_reader.cpp  read_expr.h
src/headers/: create_node.h  differentiate.h  expr_calc.h  file_reader.h  log.h  main.h  main_header.h  operations.h  parsing.h  read_expr.h  types.h
src/parsing/: pars_test.cpp  parsing.h  rec_parsing.cpp  tokenizator.cpp  tokenizator.h
src/simplification/: calculate_expressions.cpp  expr_calc.h  simplificate.cpp  simplificate.h
tests/: CMakeLists.txt  test_union.cpp  tests.cpp
tests/include/: tests.hpp
